exports[`Sync Collection Assertion Error Snapshots > \"{map | set | unknown-array} 'to have a value exhaustively satisfying' / 'to have value exhaustively satisfying' {unknown}\" [map-set-unknown_array-to-have-a-value-exhaustively-satisfying-to-have-value-exhaustively-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-set-unknown_array-to-have-a-value-exhaustively-satisfying-to-have-value-exhaustively-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected collection to have a value exhaustively satisfying 5, but none matched",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-set-unknown_array-to-have-a-value-exhaustively-satisfying-to-have-value-exhaustively-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map | set | unknown-array} 'to have a value satisfying' / 'to have value satisfying' / 'to contain a value satisfying' {unknown}\" [map-set-unknown_array-to-have-a-value-satisfying-to-have-value-satisfying-to-contain-a-value-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-set-unknown_array-to-have-a-value-satisfying-to-have-value-satisfying-to-contain-a-value-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected collection to have a value satisfying { b: 2 }, but none matched",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-set-unknown_array-to-have-a-value-satisfying-to-have-value-satisfying-to-contain-a-value-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map | set | unknown-array} 'to have values exhaustively satisfying' {unknown}\" [map-set-unknown_array-to-have-values-exhaustively-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-set-unknown_array-to-have-values-exhaustively-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected all values to exhaustively satisfy 1, but value at index 1 did not match: 2",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-set-unknown_array-to-have-values-exhaustively-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map | set | unknown-array} 'to have values satisfying' / 'to contain values satisfying' {unknown}\" [map-set-unknown_array-to-have-values-satisfying-to-contain-values-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-set-unknown_array-to-have-values-satisfying-to-contain-values-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected all values to satisfy { a: 1 }, but value at index 1 did not match: { b: 2 }",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-set-unknown_array-to-have-values-satisfying-to-contain-values-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map | set} 'to have size between' {[nonnegative-integer, nonnegative-integer]}\" [map-set-to-have-size-between-nonnegative_integer-nonnegative_integer-3s3p] > should throw a consistent AssertionError [map-set-to-have-size-between-nonnegative_integer-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Set to have size between 1 and 3, got 4",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-set-to-have-size-between-nonnegative_integer-nonnegative_integer-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map | set} 'to have size greater than' {nonnegative-integer}\" [map-set-to-have-size-greater-than-nonnegative_integer-3s3p] > should throw a consistent AssertionError [map-set-to-have-size-greater-than-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Set to have size greater than 2, got 1\\n- expected  - 1\\n+ actual    + 1\\n\\n- 2\\n+ 1",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 1,
  "expected": 2,
  "diff": "simple",
  "assertionId": "map-set-to-have-size-greater-than-nonnegative_integer-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map | set} 'to have size less than' {nonnegative-integer}\" [map-set-to-have-size-less-than-nonnegative_integer-3s3p] > should throw a consistent AssertionError [map-set-to-have-size-less-than-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Set to have size less than 2, got 3\\n- expected  - 1\\n+ actual    + 1\\n\\n- 2\\n+ 3",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 3,
  "expected": 2,
  "diff": "simple",
  "assertionId": "map-set-to-have-size-less-than-nonnegative_integer-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map-or-weakmap} 'to contain' / 'to include' {unknown}\" [map_or_weakmap-to-contain-to-include-unknown-3s3p] > should throw a consistent AssertionError [map_or_weakmap-to-contain-to-include-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Map to contain key",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map_or_weakmap-to-contain-to-include-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map-or-weakmap} 'to have entry' / 'to have key/value pair' / 'to contain entry' / 'to contain key/value pair' / 'to include entry' / 'to include key/value pair' {[unknown, unknown]}\" [map_or_weakmap-to-have-entry-to-have-keyvalue-pair-to-contain-entry-to-contain-keyvalue-pair-to-include-entry-to-include-keyvalue-pair-unknown-unknown-3s3p] > should throw a consistent AssertionError [map_or_weakmap-to-have-entry-to-have-keyvalue-pair-to-contain-entry-to-contain-keyvalue-pair-to-include-entry-to-include-keyvalue-pair-unknown-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Map entry [key, value] to equal [key, wrong]\\n- expected  - 1\\n+ actual    + 1\\n\\n  Array [\\n    \\"key\\",\\n-   \\"wrong\\",\\n+   \\"value\\",\\n  ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    "key",
    "value"
  ],
  "expected": [
    "key",
    "wrong"
  ],
  "diff": "simple",
  "assertionId": "map_or_weakmap-to-have-entry-to-have-keyvalue-pair-to-contain-entry-to-contain-keyvalue-pair-to-include-entry-to-include-keyvalue-pair-unknown-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to be empty'\" [map-to-be-empty-2s2p] > should throw a consistent AssertionError [map-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{map} 'to be empty'\\" failed:\\nCompared values have no visual difference.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "expected": {},
  "diff": "simple",
  "assertionId": "map-to-be-empty-2s2p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to equal' {map}\" [map-to-equal-map-3s3p] > should throw a consistent AssertionError [map-to-equal-map-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Maps to have equal value for key b\\n- expected  - 1\\n+ actual    + 1\\n\\n  Array [\\n    \\"b\\",\\n-   2,\\n+   3,\\n  ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    "b",
    3
  ],
  "expected": [
    "b",
    2
  ],
  "diff": "simple",
  "assertionId": "map-to-equal-map-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have a key exhaustively satisfying' / 'to have key exhaustively satisfying' / 'to have a prop exhaustively satisfying' / 'to have prop exhaustively satisfying' / 'to have a property exhaustively satisfying' / 'to have property exhaustively satisfying' / 'to have a field exhaustively satisfying' / 'to have field exhaustively satisfying' {unknown}\" [map-to-have-a-key-exhaustively-satisfying-to-have-key-exhaustively-satisfying-to-have-a-prop-exhaustively-satisfying-to-have-prop-exhaustively-satisfying-to-have-a-property-exhaustively-satisfying-to-have-property-exhaustively-satisfying-to-have-a-field-exhaustively-satisfying-to-have-field-exhaustively-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-to-have-a-key-exhaustively-satisfying-to-have-key-exhaustively-satisfying-to-have-a-prop-exhaustively-satisfying-to-have-prop-exhaustively-satisfying-to-have-a-property-exhaustively-satisfying-to-have-property-exhaustively-satisfying-to-have-a-field-exhaustively-satisfying-to-have-field-exhaustively-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Map to have a key exhaustively satisfying 'b', but none matched",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-to-have-a-key-exhaustively-satisfying-to-have-key-exhaustively-satisfying-to-have-a-prop-exhaustively-satisfying-to-have-prop-exhaustively-satisfying-to-have-a-property-exhaustively-satisfying-to-have-property-exhaustively-satisfying-to-have-a-field-exhaustively-satisfying-to-have-field-exhaustively-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have a key satisfying' / 'to have key satisfying' / 'to have a prop satisfying' / 'to have prop satisfying' / 'to have a property satisfying' / 'to have property satisfying' / 'to have a field satisfying' / 'to have field satisfying' {unknown}\" [map-to-have-a-key-satisfying-to-have-key-satisfying-to-have-a-prop-satisfying-to-have-prop-satisfying-to-have-a-property-satisfying-to-have-property-satisfying-to-have-a-field-satisfying-to-have-field-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-to-have-a-key-satisfying-to-have-key-satisfying-to-have-a-prop-satisfying-to-have-prop-satisfying-to-have-a-property-satisfying-to-have-property-satisfying-to-have-a-field-satisfying-to-have-field-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Map to have a key satisfying 99, but none matched",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-to-have-a-key-satisfying-to-have-key-satisfying-to-have-a-prop-satisfying-to-have-prop-satisfying-to-have-a-property-satisfying-to-have-property-satisfying-to-have-a-field-satisfying-to-have-field-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have key' {unknown}\" [map-to-have-key-unknown-3s3p] > should throw a consistent AssertionError [map-to-have-key-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Map to have key\\n- expected  - 1\\n+ actual    + 0\\n\\n  Array [\\n    \\"key\\",\\n-   \\"missing\\",\\n  ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    "key"
  ],
  "expected": [
    "key",
    "missing"
  ],
  "diff": "simple",
  "assertionId": "map-to-have-key-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have keys exhaustively satisfying' / 'to have props exhaustively satisfying' / 'to have properties exhaustively satisfying' / 'to have fields exhaustively satisfying' {unknown}\" [map-to-have-keys-exhaustively-satisfying-to-have-props-exhaustively-satisfying-to-have-properties-exhaustively-satisfying-to-have-fields-exhaustively-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-to-have-keys-exhaustively-satisfying-to-have-props-exhaustively-satisfying-to-have-properties-exhaustively-satisfying-to-have-fields-exhaustively-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected all Map keys to exhaustively satisfy 'a', but key at index 1 did not match: 'b'",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-to-have-keys-exhaustively-satisfying-to-have-props-exhaustively-satisfying-to-have-properties-exhaustively-satisfying-to-have-fields-exhaustively-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have keys satisfying' / 'to have props satisfying' / 'to have properties satisfying' / 'to have fields satisfying' / 'to contain keys satisfying' / 'to contain props satisfying' / 'to contain properties satisfying' / 'to contain fields satisfying' {unknown}\" [map-to-have-keys-satisfying-to-have-props-satisfying-to-have-properties-satisfying-to-have-fields-satisfying-to-contain-keys-satisfying-to-contain-props-satisfying-to-contain-properties-satisfying-to-contain-fields-satisfying-unknown-3s3p] > should throw a consistent AssertionError [map-to-have-keys-satisfying-to-have-props-satisfying-to-have-properties-satisfying-to-have-fields-satisfying-to-contain-keys-satisfying-to-contain-props-satisfying-to-contain-properties-satisfying-to-contain-fields-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected all Map keys to satisfy 99, but key at index 0 did not match: 'a'",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "map-to-have-keys-satisfying-to-have-props-satisfying-to-have-properties-satisfying-to-have-fields-satisfying-to-contain-keys-satisfying-to-contain-props-satisfying-to-contain-properties-satisfying-to-contain-fields-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have size' {nonnegative-integer}\" [map-to-have-size-nonnegative_integer-3s3p] > should throw a consistent AssertionError [map-to-have-size-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{map} 'to have size' {nonnegative-integer}\\" failed:\\nCompared values have no visual difference.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "expected": {},
  "diff": "simple",
  "assertionId": "map-to-have-size-nonnegative_integer-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{map} 'to have value' / 'to contain value' / 'to include value' {unknown}\" [map-to-have-value-to-contain-value-to-include-value-unknown-3s3p] > should throw a consistent AssertionError [map-to-have-value-to-contain-value-to-include-value-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Map to have value\\n  Comparing two different types of values. Expected string but received array.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    "value"
  ],
  "expected": "missing",
  "diff": "simple",
  "assertionId": "map-to-have-value-to-contain-value-to-include-value-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have a key matching' / 'to have key matching' / 'to have a prop matching' / 'to have prop matching' / 'to have a property matching' / 'to have property matching' / 'to have a field matching' / 'to have field matching' {RegExp}\" [non_collection_object-to-have-a-key-matching-to-have-key-matching-to-have-a-prop-matching-to-have-prop-matching-to-have-a-property-matching-to-have-property-matching-to-have-a-field-matching-to-have-field-matching-regexp-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-a-key-matching-to-have-key-matching-to-have-a-prop-matching-to-have-prop-matching-to-have-a-property-matching-to-have-property-matching-to-have-a-field-matching-to-have-field-matching-regexp-3s3p] <snapshot> 1`] = `
{
  "message": "Expected object to have a key matching /^key\\\\d+$/, but none matched",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-a-key-matching-to-have-key-matching-to-have-a-prop-matching-to-have-prop-matching-to-have-a-property-matching-to-have-property-matching-to-have-a-field-matching-to-have-field-matching-regexp-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have a key satisfying' / 'to have key satisfying' / 'to have a prop satisfying' / 'to have prop satisfying' / 'to have a property satisfying' / 'to have property satisfying' / 'to have a field satisfying' / 'to have field satisfying' {unknown}\" [non_collection_object-to-have-a-key-satisfying-to-have-key-satisfying-to-have-a-prop-satisfying-to-have-prop-satisfying-to-have-a-property-satisfying-to-have-property-satisfying-to-have-a-field-satisfying-to-have-field-satisfying-unknown-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-a-key-satisfying-to-have-key-satisfying-to-have-a-prop-satisfying-to-have-prop-satisfying-to-have-a-property-satisfying-to-have-property-satisfying-to-have-a-field-satisfying-to-have-field-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected object to have a key satisfying 99, but none matched",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-a-key-satisfying-to-have-key-satisfying-to-have-a-prop-satisfying-to-have-prop-satisfying-to-have-a-property-satisfying-to-have-property-satisfying-to-have-a-field-satisfying-to-have-field-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have exact key' / 'to have exact property' / 'to have exact prop' {property-key}\" [non_collection_object-to-have-exact-key-to-have-exact-property-to-have-exact-prop-property_key-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-exact-key-to-have-exact-property-to-have-exact-prop-property_key-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{non-collection-object} 'to have exact key' / 'to have exact property' / 'to have exact prop' {property-key}\\" failed:\\nCompared values have no visual difference.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "foo": "bar"
  },
  "expected": {
    "foo": "bar"
  },
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-exact-key-to-have-exact-property-to-have-exact-prop-property_key-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have key' / 'to have property' / 'to have prop' / 'to contain key' / 'to contain property' / 'to contain prop' / 'to include key' / 'to include property' / 'to include prop' {keypath}\" [non_collection_object-to-have-key-to-have-property-to-have-prop-to-contain-key-to-contain-property-to-contain-prop-to-include-key-to-include-property-to-include-prop-keypath-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-key-to-have-property-to-have-prop-to-contain-key-to-contain-property-to-contain-prop-to-include-key-to-include-property-to-include-prop-keypath-3s3p] <snapshot> 1`] = `
{
  "message": "Expected object to contain keypath missing.path",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "no such keypath",
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-key-to-have-property-to-have-prop-to-contain-key-to-contain-property-to-contain-prop-to-include-key-to-include-property-to-include-prop-keypath-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have keys matching' / 'to have props matching' / 'to have properties matching' / 'to have fields matching' {RegExp}\" [non_collection_object-to-have-keys-matching-to-have-props-matching-to-have-properties-matching-to-have-fields-matching-regexp-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-keys-matching-to-have-props-matching-to-have-properties-matching-to-have-fields-matching-regexp-3s3p] <snapshot> 1`] = `
{
  "message": "Expected all object keys to match /^key\\\\d+$/, but key \\"bar\\" did not match",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-keys-matching-to-have-props-matching-to-have-properties-matching-to-have-fields-matching-regexp-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have keys satisfying' / 'to have props satisfying' / 'to have properties satisfying' / 'to have fields satisfying' {unknown}\" [non_collection_object-to-have-keys-satisfying-to-have-props-satisfying-to-have-properties-satisfying-to-have-fields-satisfying-unknown-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-keys-satisfying-to-have-props-satisfying-to-have-properties-satisfying-to-have-fields-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected all object keys to satisfy 99, but key \\"a\\" did not match",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-keys-satisfying-to-have-props-satisfying-to-have-properties-satisfying-to-have-fields-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{non-collection-object} 'to have keys' / 'to have properties' / 'to have props' / 'to contain keys' / 'to contain properties' / 'to contain props' / 'to include keys' / 'to include properties' / 'to include props' {property-key[]}\" [non_collection_object-to-have-keys-to-have-properties-to-have-props-to-contain-keys-to-contain-properties-to-contain-props-to-include-keys-to-include-properties-to-include-props-property_key-3s3p] > should throw a consistent AssertionError [non_collection_object-to-have-keys-to-have-properties-to-have-props-to-contain-keys-to-contain-properties-to-contain-props-to-include-keys-to-include-properties-to-include-props-property_key-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{non-collection-object} 'to have keys' / 'to have properties' / 'to have props' / 'to contain keys' / 'to contain properties' / 'to contain props' / 'to include keys' / 'to include properties' / 'to include props' {property-key[]}\\" failed:\\nCompared values have no visual difference.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "a": 1
  },
  "expected": {
    "a": 1
  },
  "diff": "simple",
  "assertionId": "non_collection_object-to-have-keys-to-have-properties-to-have-props-to-contain-keys-to-contain-properties-to-contain-props-to-include-keys-to-include-properties-to-include-props-property_key-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{record} 'to have size' {nonnegative-integer}\" [record-to-have-size-nonnegative_integer-3s3p] > should throw a consistent AssertionError [record-to-have-size-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Expected object to have 3 keys, but it has 1 keys\\n- expected  - 1\\n+ actual    + 1\\n\\n- 3\\n+ 1",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 1,
  "expected": 3,
  "diff": "simple",
  "assertionId": "record-to-have-size-nonnegative_integer-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set-or-weakset} 'to contain' / 'to include' {unknown}\" [set_or_weakset-to-contain-to-include-unknown-3s3p] > should throw a consistent AssertionError [set_or_weakset-to-contain-to-include-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected Set to contain value",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set_or_weakset-to-contain-to-include-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to be a subset of' {set}\" [set-to-be-a-subset-of-set-3s3p] > should throw a consistent AssertionError [set-to-be-a-subset-of-set-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to be a subset of' {set}\\" failed for arguments: [ Set(2) { 1, 4 }, 'to be a subset of', Set(3) { 1, 2, 3 } ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-be-a-subset-of-set-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to be a superset of' {set}\" [set-to-be-a-superset-of-set-3s3p] > should throw a consistent AssertionError [set-to-be-a-superset-of-set-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to be a superset of' {set}\\" failed for arguments: [ Set(2) { 1, 2 }, 'to be a superset of', Set(3) { 1, 2, 3 } ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-be-a-superset-of-set-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to be disjoint from' {set}\" [set-to-be-disjoint-from-set-3s3p] > should throw a consistent AssertionError [set-to-be-disjoint-from-set-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to be disjoint from' {set}\\" failed for arguments: [ Set(2) { 1, 2 }, 'to be disjoint from', Set(2) { 2, 3 } ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-be-disjoint-from-set-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to be empty'\" [set-to-be-empty-2s2p] > should throw a consistent AssertionError [set-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to be empty'\\" failed:\\nCompared values have no visual difference.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "expected": {},
  "diff": "simple",
  "assertionId": "set-to-be-empty-2s2p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to equal' {set}\" [set-to-equal-set-3s3p] > should throw a consistent AssertionError [set-to-equal-set-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to equal' {set}\\" failed for arguments: [ Set(2) { 1, 2 }, 'to equal', Set(2) { 1, 3 } ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-equal-set-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to have difference' {set} 'equal to' {set}\" [set-to-have-difference-set-equal-to-set-5s5p] > should throw a consistent AssertionError [set-to-have-difference-set-equal-to-set-5s5p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to have difference' {set} 'equal to' {set}\\" failed for arguments: [\\n  Set(3) { 1, 2, 3 },\\n  'to have difference',\\n  Set(2) { 2, 4 },\\n  'equal to',\\n  Set(2) { 1, 2 }\\n]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-have-difference-set-equal-to-set-5s5p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to have intersection' {set} 'equal to' {set}\" [set-to-have-intersection-set-equal-to-set-5s5p] > should throw a consistent AssertionError [set-to-have-intersection-set-equal-to-set-5s5p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to have intersection' {set} 'equal to' {set}\\" failed for arguments: [\\n  Set(3) { 1, 2, 3 },\\n  'to have intersection',\\n  Set(3) { 2, 3, 4 },\\n  'equal to',\\n  Set(3) { 2, 3, 4 }\\n]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-have-intersection-set-equal-to-set-5s5p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to have size' {nonnegative-integer}\" [set-to-have-size-nonnegative_integer-3s3p] > should throw a consistent AssertionError [set-to-have-size-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to have size' {nonnegative-integer}\\" failed:\\n  Comparing two different types of values. Expected number but received set.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "expected": 3,
  "diff": "simple",
  "assertionId": "set-to-have-size-nonnegative_integer-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to have symmetric difference' {set} 'equal to' {set}\" [set-to-have-symmetric-difference-set-equal-to-set-5s5p] > should throw a consistent AssertionError [set-to-have-symmetric-difference-set-equal-to-set-5s5p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to have symmetric difference' {set} 'equal to' {set}\\" failed for arguments: [\\n  Set(2) { 1, 2 },\\n  'to have symmetric difference',\\n  Set(2) { 2, 3 },\\n  'equal to',\\n  Set(2) { 1, 2 }\\n]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-have-symmetric-difference-set-equal-to-set-5s5p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to have union' {set} 'equal to' {set}\" [set-to-have-union-set-equal-to-set-5s5p] > should throw a consistent AssertionError [set-to-have-union-set-equal-to-set-5s5p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to have union' {set} 'equal to' {set}\\" failed for arguments: [\\n  Set(2) { 1, 2 },\\n  'to have union',\\n  Set(1) { 3 },\\n  'equal to',\\n  Set(3) { 1, 2, 4 }\\n]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-have-union-set-equal-to-set-5s5p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{set} 'to intersect with' {set}\" [set-to-intersect-with-set-3s3p] > should throw a consistent AssertionError [set-to-intersect-with-set-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{set} 'to intersect with' {set}\\" failed for arguments: [ Set(2) { 1, 2 }, 'to intersect with', Set(2) { 3, 4 } ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "set-to-intersect-with-set-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{unknown-array} 'to be non-empty'\" [unknown_array-to-be-non_empty-2s2p] > should throw a consistent AssertionError [unknown_array-to-be-non_empty-2s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown-array} 'to be non-empty'\\" failed:\\n- expected  - 3\\n+ actual    + 1\\n\\n- Array [\\n-   null,\\n- ]\\n+ Array []",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [],
  "expected": [
    null
  ],
  "diff": "simple",
  "assertionId": "unknown_array-to-be-non_empty-2s2p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{unknown-array} 'to contain' / 'to include' {unknown}\" [unknown_array-to-contain-to-include-unknown-3s3p] > should throw a consistent AssertionError [unknown_array-to-contain-to-include-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected array to contain value",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown_array-to-contain-to-include-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{unknown-array} 'to have item satisfying' / 'to have an item satisfying' / 'to contain item satisfying' {unknown}\" [unknown_array-to-have-item-satisfying-to-have-an-item-satisfying-to-contain-item-satisfying-unknown-3s3p] > should throw a consistent AssertionError [unknown_array-to-have-item-satisfying-to-have-an-item-satisfying-to-contain-item-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Expected array to contain an item satisfying the given shape",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown_array-to-have-item-satisfying-to-have-an-item-satisfying-to-contain-item-satisfying-unknown-3s3p"
}
`;

exports[`Sync Collection Assertion Error Snapshots > \"{unknown-array} 'to have length' / 'to have size' {nonnegative-integer}\" [unknown_array-to-have-length-to-have-size-nonnegative_integer-3s3p] > should throw a consistent AssertionError [unknown_array-to-have-length-to-have-size-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown-array} 'to have length' / 'to have size' {nonnegative-integer}\\" failed:\\n- expected  - 2\\n+ actual    + 0\\n\\n  Array [\\n    1,\\n    2,\\n    3,\\n-   null,\\n-   null,\\n  ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    1,
    2,
    3
  ],
  "expected": [
    1,
    2,
    3,
    null,
    null
  ],
  "diff": "simple",
  "assertionId": "unknown_array-to-have-length-to-have-size-nonnegative_integer-3s3p"
}
`;
